vlib/v/checker/tests/optional_in_println_mismatch.vv
fn funcy() ?int {
	return none
}

fn main() {
	println(funcy() or { '' })
}
